correcion en nombres

--- a/Papear.tex
+++ b/Papear.tex
@@ -72,11 +72,11 @@
 
 \begin{document}
 
-\title{Learning Enriched Features for Fast Image Restoration and Enhancement\thanks{Work supported by ...}}
+\title{Learning Enriched Features for Fast Image Restoration and Enhancement}
 
-\author{Fredy Abel Huanca Torres\thanks{Universidad Nacional San Agustín de Arequipa, fhuancat@unsa.edu.pe},
-		Jose Edison Perez Mamani\thanks{Universidad Nacional San Agustín de Arequipa, jperezma@unsa.edu.pe} y
-		Henrry Ivan Arias Mamani\thanks{Universidad Nacional San Agustín de Arequipa, hariasm@unsa.edu.pe}}
+\author{Fredy A. Huanca T.\thanks{Universidad Nacional San Agustín de Arequipa, fhuancat@unsa.edu.pe},
+		Jose E. Perez M.\thanks{Universidad Nacional San Agustín de Arequipa, jperezma@unsa.edu.pe} y
+		Henrry I. Arias M.\thanks{Universidad Nacional San Agustín de Arequipa, hariasm@unsa.edu.pe}}
 	
 \maketitle
 
