cambio en figura

--- a/Papear.tex
+++ b/Papear.tex
@@ -130,7 +130,7 @@ Los experimentos realizados en este articulo demuestran que el MIRNet supera a o
 \begin{figure}[!h]
     \centering
     \includegraphics*[width=.5\textwidth]{ll-train-losses-ep}
-    \caption{Framework de la red propuesta MIRNet para la restauración y mejora de imágenes. MIRNet se basa en un diseño residual recursivo. En el corazón de MIRNet está el bloque residual multi-escala (MRB), cuya rama principal está dedicada a mantener representaciones de alta resolución y características contextualizadas. Además, utiliza la fusión selectiva de características del núcleo (SKFF) para intercambiar información entre flujos paralelos y consolidar características de alta y baja resolución.}
+    \caption{Pérdida de entrenamiento y validación a través de las épocas}
     \label{fig:ll_train_losses_ep}
 \end{figure}
 
